Added psmsl support

--- a/tests/test_import.ipynb
+++ b/tests/test_import.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import hvec_support.hvec_styles as style"
+    "import hvec_support.styles as style"
    ]
   },
   {
