--- a/development/bulk_import_ipcc.ipynb
+++ b/development/bulk_import_ipcc.ipynb
@@ -192,18 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'hv_psmsl' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Hessel Voortman\\OneDrive - Hessel Voortman EC BV\\Packages\\hvec_support\\development\\bulk_import_ipcc.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Hessel%20Voortman/OneDrive%20-%20Hessel%20Voortman%20EC%20BV/Packages/hvec_support/development/bulk_import_ipcc.ipynb#ch0000005?line=0'>1</a>\u001b[0m df, log \u001b[39m=\u001b[39m hv_psmsl\u001b[39m.\u001b[39mfull_import()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'hv_psmsl' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:10<00:00,  2.11s/it]\n"
      ]
     }
    ],
@@ -213,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,6 +241,7 @@
        "      <th>median</th>\n",
        "      <th>90%_low</th>\n",
        "      <th>90%_high</th>\n",
+       "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -258,6 +255,7 @@
        "      <td>0.046</td>\n",
        "      <td>-0.025</td>\n",
        "      <td>0.121</td>\n",
+       "      <td>GIBARA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -269,6 +267,7 @@
        "      <td>0.056</td>\n",
        "      <td>-0.002</td>\n",
        "      <td>0.118</td>\n",
+       "      <td>GIBARA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -280,6 +279,7 @@
        "      <td>0.056</td>\n",
        "      <td>0.006</td>\n",
        "      <td>0.110</td>\n",
+       "      <td>GIBARA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -291,6 +291,7 @@
        "      <td>0.059</td>\n",
        "      <td>0.011</td>\n",
        "      <td>0.113</td>\n",
+       "      <td>GIBARA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -302,9 +303,11 @@
        "      <td>0.056</td>\n",
        "      <td>0.012</td>\n",
        "      <td>0.106</td>\n",
+       "      <td>GIBARA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -324,6 +327,7 @@
        "      <td>-4.600</td>\n",
        "      <td>-9.000</td>\n",
        "      <td>3.300</td>\n",
+       "      <td>KODIAK ISLAND, WOMENS BAY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>94</th>\n",
@@ -335,6 +339,7 @@
        "      <td>-2.200</td>\n",
        "      <td>-9.000</td>\n",
        "      <td>8.200</td>\n",
+       "      <td>KODIAK ISLAND, WOMENS BAY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
@@ -346,6 +351,7 @@
        "      <td>-1.200</td>\n",
        "      <td>-7.200</td>\n",
        "      <td>10.600</td>\n",
+       "      <td>KODIAK ISLAND, WOMENS BAY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
@@ -357,6 +363,7 @@
        "      <td>-4.500</td>\n",
        "      <td>-10.900</td>\n",
        "      <td>8.300</td>\n",
+       "      <td>KODIAK ISLAND, WOMENS BAY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
@@ -368,30 +375,44 @@
        "      <td>17.700</td>\n",
        "      <td>-8.400</td>\n",
        "      <td>119.000</td>\n",
+       "      <td>KODIAK ISLAND, WOMENS BAY</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3920 rows × 8 columns</p>\n",
+       "<p>3920 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    psmsl_id     process confidence scenario  year  median  90%_low  90%_high\n",
-       "0        563       total     medium   ssp119  2020   0.046   -0.025     0.121\n",
-       "1        563       total     medium   ssp126  2020   0.056   -0.002     0.118\n",
-       "2        563       total     medium   ssp245  2020   0.056    0.006     0.110\n",
-       "3        563       total     medium   ssp370  2020   0.059    0.011     0.113\n",
-       "4        563       total     medium   ssp585  2020   0.056    0.012     0.106\n",
-       "..       ...         ...        ...      ...   ...     ...      ...       ...\n",
-       "93       567  totalrates     medium   ssp245  2150  -4.600   -9.000     3.300\n",
-       "94       567  totalrates     medium   ssp370  2150  -2.200   -9.000     8.200\n",
-       "95       567  totalrates     medium   ssp585  2150  -1.200   -7.200    10.600\n",
-       "96       567  totalrates        low   ssp126  2150  -4.500  -10.900     8.300\n",
-       "97       567  totalrates        low   ssp585  2150  17.700   -8.400   119.000\n",
+       "    psmsl_id     process confidence scenario  year  median  90%_low  90%_high  \\\n",
+       "0        563       total     medium   ssp119  2020   0.046   -0.025     0.121   \n",
+       "1        563       total     medium   ssp126  2020   0.056   -0.002     0.118   \n",
+       "2        563       total     medium   ssp245  2020   0.056    0.006     0.110   \n",
+       "3        563       total     medium   ssp370  2020   0.059    0.011     0.113   \n",
+       "4        563       total     medium   ssp585  2020   0.056    0.012     0.106   \n",
+       "..       ...         ...        ...      ...   ...     ...      ...       ...   \n",
+       "93       567  totalrates     medium   ssp245  2150  -4.600   -9.000     3.300   \n",
+       "94       567  totalrates     medium   ssp370  2150  -2.200   -9.000     8.200   \n",
+       "95       567  totalrates     medium   ssp585  2150  -1.200   -7.200    10.600   \n",
+       "96       567  totalrates        low   ssp126  2150  -4.500  -10.900     8.300   \n",
+       "97       567  totalrates        low   ssp585  2150  17.700   -8.400   119.000   \n",
        "\n",
-       "[3920 rows x 8 columns]"
+       "                         name  \n",
+       "0                      GIBARA  \n",
+       "1                      GIBARA  \n",
+       "2                      GIBARA  \n",
+       "3                      GIBARA  \n",
+       "4                      GIBARA  \n",
+       "..                        ...  \n",
+       "93  KODIAK ISLAND, WOMENS BAY  \n",
+       "94  KODIAK ISLAND, WOMENS BAY  \n",
+       "95  KODIAK ISLAND, WOMENS BAY  \n",
+       "96  KODIAK ISLAND, WOMENS BAY  \n",
+       "97  KODIAK ISLAND, WOMENS BAY  \n",
+       "\n",
+       "[3920 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,10 +423,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)/(98*8)"
+   ]
   }
  ],
  "metadata": {
